feat: add npm commands to package json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "directories": {
     "test": "test"
   },
-  "scripts": {},
+  "scripts": {
+    "clean": "rm -rf playwright-report | rm -rf test-results",
+    "walkthrough": "npx playwright test tests/002_walkthrough/walkthrough.spec.ts",
+    "test": "npx playwright test tests/001_pages/*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
